--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-turn to csdn blog!
+this is a website.
 <script>
-  window.location.href="http://blog.csdn.net/houzhiwen_yy";
+  //window.location.href="http://blog.csdn.net/houzhiwen_yy";
 </script>
